--- a/README.Rmd
+++ b/README.Rmd
@@ -68,11 +68,11 @@ Available functions in the latest CRAN version:
 
 The above CRAN version is considered fairly stable and will only be updated every few months. We work on new features in the development version. This version should be considered very experimental and may have bugs. You can install this using `devtools::install_github("tombeesley/eyetools@0.X.X")` where 0.X.X is the latest version. 
 
-The current development version is: 0.9.0
+#### The current development version is: 0.9.0
+The main changes are:
 
-# eyetools 0.9.0
 * removed the need to specify a name for the participant column. eyetools now expects the column 'pID' in all input data
 * all 'plot_' functions now have a 'pID_values' parameter to enable selection of certain participant data to plot
-* renamed 'trial_number' to 'trial_values' for consistency with the above changes
+* renamed 'trial_number' to 'trial_values' in all relevant functions, for consistency with the above change to pID_values
 * fixed an issue where colour scale for fixations was dependent on showing fixation label
 * cosmetic changes made to plotting of AOIs 
